# optical-flow-fpga

./: .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .verible-lint.rules  LICENSE  README.md  copy_files.sh  pyproject.toml
.github/workflows/: verify_optical_flow.yml
benchmarks/: comparison_template.md
benchmarks/unopt_baseline_20260216/: DESIGN_NOTES.md  README.md  critical_path_verbose.txt  logic_levels.txt  metrics.txt  route_status_unopt.rpt  rtl_manifest.txt  timing_summary_excerpt.txt
constraints/: timing_opt.xdc  timing_unopt.xdc
docs/: NOTATION.md
docs/architecture/: block_diagram.md
docs/baseline/: README.md
docs/baseline/reports/: critical_paths_detail.txt  timing_summary_unopt.rpt  utilization_unopt.rpt
prj/optical_flow_fpga_prj/: optical_flow_fpga_prj.xpr
prj/sim_tb_optical_flow_top/: sim_project.xpr
prj/unopt/: optical_flow_unopt.xpr  timing_postroute_unopt.rpt  timing_summary_unopt.rpt  utilization_postroute_unopt.rpt  utilization_unopt.rpt
python/: README.md  flow_metrics.py  generate_test_frames.py  generate_test_frames_natural.py  generate_test_suite.py  lucas_kanade_core.py  lucas_kanade_pyramidal.py  lucas_kanade_reference.py  optical_flow_verifier.py  verification_baseline.json  verification_config.yaml  verification_results.json  verification_results.md
python/output/: flow_u.npy  flow_v.npy
python/tb/test_frames/: frame_01.mem
rtl/: frame_buffer_simple.sv
rtl/common/: frame_buffer_simple.sv  line_buffer_5x5.sv
rtl/unopt/: bram_read_arbiter.sv  flow_accumulator.sv  flow_solver.sv  flow_upsampler.sv  frame_memory.sv  frame_warper.sv  gradient_compute.sv  optical_flow_top.sv  optical_flow_top_pyramidal.sv  pixel_sequencer.sv  pyramid_builder.sv  pyramid_control_fsm.sv  window_accumulator.sv
scripts/: build.sh  convert_frames.py  pre_merge_check.sh  regenerate_flow_plots.sh  run_sim.sh  run_sim.tcl  setup_verible.sh  synth_config.tcl  visualize_flow.py
sim_tb_optical_flow_top/: sim_project.xpr
tb/: tb_frame_buffer.sv  tb_optical_flow_top.sv  tb_optical_flow_top_pyramidal.sv
tb/test_frames/: frame_00.mem  frame_01.mem
